@@ -188,13 +188,13 @@ public class Package
             for(int j = 0; j < rel_coor.length; ++j)
             {
                 p_par.file.write(" ");
-                p_par.file.write((new Double(rel_coor[j])).toString());
+                p_par.file.write((Double.valueOf(rel_coor[j])).toString());
             }
             int rotation = (int) Math.round(curr_pin.rotation_in_degree);
             if (rotation != 0)
             {
                 p_par.file.write("(rotate ");
-                p_par.file.write((new Integer(rotation)).toString());
+                p_par.file.write((Integer.valueOf(rotation)).toString());
                 p_par.file.write(")");
             }
             p_par.file.write(")");
